trunk/Archive/3fe1c0107d63f27f28792d7678c32b3a-25dabfc2c190f5ef027f31d968947336/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:7:23: error: use of class template 'A<T1>::B' requires template arguments
        static A<T1>::B f;
                      ^
main.cpp:5:12: note: template is declared here
    struct B
           ^
main.cpp:19:8: error: use of class template 'A<T1>::B' requires template arguments
A<T1>::B // clang/gcc accept, msvc rejects missing typename
       ^
main.cpp:5:12: note: template is declared here
    struct B
           ^
2 errors generated.
